workloads/namespace-1/app-1/route.yaml
apiVersion: route.openshift.io/v1
kind: Route
metadata:
  labels:
    app.kubernetes.io/instance: app-1
  name: app-1
spec:
  host: app-1-subtenant-1-namespace-1.apps-crc.testing
  port:
    targetPort: 8080
  # subdomain: ""
  to:
    kind: Service
    name: app-1
    weight: 100
  wildcardPolicy: None
status:
  ingress:
    - conditions:
        - status: 'True'
          type: Admitted
